[package]
authors = ['blocktree <https://github.com/blocktree/>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://github.com/blocktree/'
license = 'Unlicense'
name = 'pallet-commissioned-shopping'
repository = 'https://github.com/blocktree/shopbring/'
version = '1.0.0'
