[package]
authors = ['blocktree <https://github.com/blocktree/>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://github.com/blocktree/'
license = 'Unlicense'
name = 'pallet-invitation'
repository = 'https://github.com/blocktree/shopbring/'
version = '1.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { version = '2.0.0', default-features = false }
primitives = { package = 'shopbring-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'primitives/std',
]
